# intake-satpy

./: .bandit  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  deploy-sdist.yaml
continuous_integration/: environment.yaml
examples/: aws_abi_l1b_20220101_18.yaml  local_abi_l1b.yaml
intake_satpy/: generic.py  version.py
intake_satpy/tests/: test_driver.py
