[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", 'setuptools_scm_git_archive']
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "intake_satpy/version.py"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "intake_satpy"
line_length = 120
skip = [".gitignore", "intake_satpy/version.py"]

[tool.black]
line-length = 120
exclude = '''
(
  \.git
  | build
  | dist
  | intake_satpy/version\.py
)

'''

[tool.mypy]
python_version = "3.10"

[project]
name = "intake_satpy"
description = "Intake drivers using Satpy to read and manipulate data"
readme = "README.md"
keywords = ["intake", "pytroll", "satpy"]
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "intake",
    "intake-xarray",
    "satpy",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]

[tool.setuptools]
packages = ["intake_satpy"]

[project.entry-points."intake.drivers"]
satpy = "intake_satpy.generic:SatpySource"
